src/test/deca/context/valid/expressions/conv_float.deca
// Description:
//    Test de  conv_flot
//
// Resultats:
//    Lexeur: pas d'erreur
//    Parseur: pas d'erreur 
//    context : pas d'erreur 
//
// Historique:
//    cree le 12/01/2022

{
    3 != 3.0;
    3.0 != 3;
}